--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "shelljs": "^0.8.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/shelljs": "^0.8.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
